--- a/content/klc/S7.2.adoc
+++ b/content/klc/S7.2.adoc
@@ -2,5 +2,13 @@
 brief = "Graphical Symbols"
 +++
 
-1. Reference field must be set to `#SYM` and must be *invisible*
+Graphical symbols are used only to annotate schematics and do *not* correspond to a footprint on the PCB.
+
+
+1. Reference Designator must be set to `#SYM` and must be *invisible*
+1. Graphical symbols must not contain any pins
 1. No pins or footprint association
+
+Example:
+
+{{< klcimg src="S7.2_a" >}}
