--- a/content/klc/F5.1.adoc
+++ b/content/klc/F5.1.adoc
@@ -4,3 +4,6 @@ brief = "Footprint placement type must be set to surface mount"
 
 The *Footprint placement type* must be set to `Surface mount` for SMD footprints. This is to ensure that these footprints are included in the *Footprint position (.pos)* file output.
 
+To set the footprint placement type, open the *Footprint properties* window and select *Surface Mount* as indicated.
+
+{{< klcimg src="F5.1" >}}
