--- a/content/klc/F6.6.adoc
+++ b/content/klc/F6.6.adoc
@@ -2,4 +2,4 @@
 brief = "Minimum hole diameter"
 +++
 
-Minimum drilled hole diameter is the maximum lead diameter plue `0.2mm` (IPC-2222 class 2)
+Minimum drilled hole diameter is the maximum lead diameter plus `0.2mm` (IPC-2222 class 2)
