--- a/content/klc/F7.1.adoc
+++ b/content/klc/F7.1.adoc
@@ -1,5 +1,10 @@
 +++
-brief = "Footprint name must match filename"
+brief = "Footprint meta-data should be filled in as appropriate"
 +++
 
-The name of the footprint must match the filename
+1. **Documentation** field contains comma-separated device information. Where appropriate, a URL to the footprint datasheet should be included.
+1. **Keywords** field contains space-separated keyword values
+1. **Ref** field must be set to `REF**`
+1. **Value** field must match footprint filename (ignoring the `.kicad_mod` extension)
+
+{{< klcimg src="F7.1a" >}}
