--- a/content/klc/G1.2.adoc
+++ b/content/klc/G1.2.adoc
@@ -2,4 +2,6 @@
 brief = "Library size should be limited to 500 items"
 +++
 
-Libraries with more than 500 items
+Libraries with more than 500 items can result in long library loading times. Additionally, such broad categorization of components means that it can be hard to locate a particular component in the libraries.
+
+A library size limit of `500` items ensures that libraries are quick to load and components are easy to locate. If a given library exceeds `500` components, it should be split and further subcategorized according to component functionality.
