--- a/content/klc/S4.4.adoc
+++ b/content/klc/S4.4.adoc
@@ -1,3 +1,11 @@
 +++
-brief = "Pin grouping"
+brief = "Pin electrical type"
 +++
+
+Pin `Electrical type` should be set to match the appropriate pin function
+
+1. Power and ground pins should be set to either `Power Input` or `Power Outpu`
+1. Logic pins should be set according to datasheet requirements
+1. Pins with programmable functionality (e.g. MCU I/O ports) should be set to `Bidirectional`
+
+{{< klcimg src="S4.4a" >}}
