--- a/content/klc/S6.3.adoc
+++ b/content/klc/S6.3.adoc
@@ -2,4 +2,12 @@
 brief = "Component metadata"
 +++
 
-1. RefDes is selected appropriately for the symbol
+Component metadata is contained in the `<libname>.dcm` file, and must be filled in for each unique symbol (and each alias for the symbol).
+
+1. **Description** field contains comma-separated device information
+.. For symbols with a default footprint, the simplified footprint name should be appended to the description e.g. `SOIC-8`
+.. Part name should not be duplicated in the description field
+1. **Keywords** field contains space-separated keyword values. These values are used to assist in part searching and should not include filler words
+1. **Documentation File Name** field contains URL to part documentation if applicaple, or is otherwise left blank
+
+{{< klcimg src="S6.3a" >}}
