Improved display of KLC images
- Added "title" parameter
- Added border
- Reduce image opacity on hover
- Added F3.7 (virtual components)

--- a/content/klc/F3.5.adoc
+++ b/content/klc/F3.5.adoc
@@ -10,4 +10,4 @@ KiCad does not yet have a method for drawing keepout areas inside footprint file
 
 Example:
 
-{{< klcimg src="F3.5" >}}
+{{< klcimg src="F3.5" title="Drawing keepout areas" >}}
