--- a/content/klc/S4.4.adoc
+++ b/content/klc/S4.4.adoc
@@ -8,4 +8,4 @@ Pin `Electrical type` should be set to match the appropriate pin function
 1. Logic pins should be set according to datasheet requirements
 1. Pins with programmable functionality (e.g. MCU I/O ports) should be set to `Bidirectional`
 
-{{< klcimg src="S4.4a" >}}
+{{< klcimg src="S4.4a" title="Pin electrical type should match function">}}
