--- a/content/klc/F7.1.adoc
+++ b/content/klc/F7.1.adoc
@@ -1,10 +1,17 @@
 +++
-brief = "Footprint meta-data should be filled in as appropriate"
+brief = "Virtual components"
 +++
 
-1. **Documentation** field contains comma-separated device information. Where appropriate, a URL to the footprint datasheet should be included.
-1. **Keywords** field contains space-separated keyword values
-1. **Ref** field must be set to `REF**`
-1. **Value** field must match footprint filename (ignoring the `.kicad_mod` extension)
+_Virtual components_ are those which have a footprint on the PCB (and may additionally have a schematic symbol) but do not have an associated physical component which needs to be loaded onto the board during assembly.
 
-{{< klcimg src="F7.1a" title="Footprint Properties dialog" >}}
+Examples of virtual components include:
+
+* Mounting holes
+* Solder bridges
+* Net ties
+* Test points
+* Fiducial markings
+
+Virtual components must be indicated by setting the the *Placement type* to `Virtual` in the *Footprint Properties* dialog.
+
+{{< klcimg src="F3.7a" title="Set Placement type to 'Virtual' for footprints without physical components" >}}
